WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
216842
[LFC][IFC] Atomic inline-level box with margin is mispositioned
https://bugs.webkit.org/show_bug.cgi?id=216842
Summary
[LFC][IFC] Atomic inline-level box with margin is mispositioned
alan
Reported
2020-09-22 13:11:22 PDT
margin box is used for the logical top
Attachments
Patch
(4.21 KB, patch)
2020-09-22 13:18 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2020-09-22 13:18:55 PDT
Created
attachment 409394
[details]
Patch
EWS
Comment 2
2020-09-22 14:45:36 PDT
Committed
r267437
: <
https://trac.webkit.org/changeset/267437
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 409394
[details]
.
Radar WebKit Bug Importer
Comment 3
2020-09-22 15:25:23 PDT
<
rdar://problem/69395356
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug